--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,33 +1,33 @@
 .signup__bg {
-    background-image: url(https://images.unsplash.com/photo-1622556498246-755f44ca76f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG1lc3NhZ2UlMjBhcHB8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60);
-    height: 92vh;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow-x: hidden;
+  background-image: url(https://images.unsplash.com/photo-1620795058263-86dd37052e72?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fHdoaXRlJTIwYWVzdGhldGljfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+  height: 92vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 .signup-profile-pic__container {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .signup-profile-pic {
-    width: 100px;
-    border-radius: 50%;
-    border: 2px solid gray;
-    object-fit: cover;
-    height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 2px solid gray;
+  object-fit: cover;
+  height: 100px;
 }
 
 .add-picture-icon {
-    position: absolute;
-    bottom: 0;
-    right: 10px;
-    color: green;
-    background: white;
-    cursor: pointer;
-    z-index: 99;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  color: green;
+  background: white;
+  cursor: pointer;
+  z-index: 99;
 }
